[gd_scene load_steps=2 format=3 uid="uid://btqbv6a1kla5e"]

[ext_resource type="Script" path="res://Interaction/Interaction_Area/Interaction_Area.gd" id="1_npq5l"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_npq5l")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
